--- a/tnc/index.html
+++ b/tnc/index.html
@@ -184,14 +184,14 @@
                 <div class="flex flex-wrap justify-center items-center gap-x-6"><a target="_blank"
                         class="uppercase text-xs md:text-lg"
                         href="https://destra-network.gitbook.io/documentation">docs</a><a target="_blank"
-                        class="uppercase text-xs md:text-lg" href="https://destranetwork.io/">projects</a><a
+                        class="uppercase text-xs md:text-lg" href="https://app.destraai.pro/">projects</a><a
                         target="_blank" class="uppercase text-xs md:text-lg"
-                        href="https://destranetwork.io/gpu-node">gpu network</a><a target="_blank"
+                        href="https://app.destraai.pro/gpu-node">gpu network</a><a target="_blank"
                         class="uppercase text-xs md:text-lg" href="https://ocai.destranetwork.io/">deploy ai</a></div>
                 <div class="flex items-center gap-x-6"><a href="https://x.com/destranetwork" target="_blank"
                         rel="noopener noreferrer"><img alt="x" loading="lazy" width="40" height="40" decoding="async"
                             data-nimg="1" class="size-5 md:size-8" style="color:transparent"
-                            src="/socials/x.svg" /></a><a href="https://t.me/DestraNetwork" target="_blank"
+                            src="/socials/x.svg" /></a><a href="https://t.me/destra_ai" target="_blank"
                         rel="noopener noreferrer"><img alt="tg" loading="lazy" width="40" height="40" decoding="async"
                             data-nimg="1" class="size-5 md:size-8" style="color:transparent"
                             src="/socials/tg.svg" /></a></div>
