--- a/index.html
+++ b/index.html
@@ -3259,7 +3259,7 @@
               href="https://app.destraai.pro/">deploy ai</a></div>
           <div class="flex items-center gap-x-6"><a href="https://x.com/destranetwork" target="_blank"
               rel="noopener noreferrer"><img alt="x" loading="lazy" width="40" height="40" decoding="async"
-                data-nimg="1" class="size-5 md:size-8" style="color:transparent" src="/socials/x.svg" /></a><a href="https://t.me/destra_ai"
+                data-nimg="1" class="size-5 md:size-8" style="color:transparent" src="/socials/x.svg" /></a><a href="https://t.me/destraai_eth"
               target="_blank" rel="noopener noreferrer"><img alt="tg" loading="lazy" width="40" height="40"
                 decoding="async" data-nimg="1" class="size-5 md:size-8" style="color:transparent"
                 src="/socials/tg.svg" /></a></div>
@@ -3271,7 +3271,7 @@
           <p>Destra Network @2024 all rights reserved</p>
           <div class="relative">
             <div class=" text-center   py-2.5 px-6 rounded-xl text-xs sm:text-sm md:text-base cursor-pointer">CA:
-              <!-- -->0xef9131812e0a6e7f3d9ca6292316ffe2fd6421d7
+              <!-- -->0x00000000000000000000000000000000000000
             </div>
           </div>
           <div class="flex items-center gap-x-6"><a target="_blank" href="/tnc">terms &amp; conditions</a><a
