--- a/privacy/index.html
+++ b/privacy/index.html
@@ -181,7 +181,7 @@
                 style="color: transparent;"><span class="text-[#FF3838] font-bold text-base leading-normal">Contact
                 Us</span></a></div>
           <div class=" flex items-center gap-1 rounded-[16px] justify-end p-2 bg-white"><a target="_blank"
-              href="https://t.me/destraai_eth"><img alt="alt" loading="lazy" width="100" height="100" decoding="async"
+              href="https://t.me/destra_eth"><img alt="alt" loading="lazy" width="100" height="100" decoding="async"
                 data-nimg="1" class="size-6" src="/telegramnav.svg" style="color: transparent;"></a></div>
         </div>
       </div>
@@ -225,7 +225,7 @@
                 <path d="m22 10-8.97 5.7a1.94 1.94 0 0 1-2.06 0L2 10"></path>
               </svg></a></div>
           <div class=" flex items-center p-1.5 px-2.5 rounded-lg"><a target="_blank"
-              href="https://t.me/destraai_eth"><img alt="alt" loading="lazy" width="100" height="100" decoding="async"
+              href="https://t.me/destra_eth"><img alt="alt" loading="lazy" width="100" height="100" decoding="async"
                 data-nimg="1" class="size-6" src="/telegram.svg" style="color: transparent;"></a></div>
         </div>
         <div class="sm:hidden z-50"><img alt="menu" loading="lazy" width="24" height="24" decoding="async" data-nimg="1"
@@ -303,9 +303,9 @@
             target="_blank" class="uppercase text-xs md:text-lg" href="https://app.destraai.pro/gpu-node">gpu
             network</a><a target="_blank" class="uppercase text-xs md:text-lg"
             href="https://app.destraai.pro/">deploy ai</a></div>
-        <div class="flex items-center gap-x-6"><a href="https://x.com/DestraAI_Eth" target="_blank"
+        <div class="flex items-center gap-x-6"><a href="https://x.com/Destra_Eth" target="_blank"
             rel="noopener noreferrer"><img alt="x" loading="lazy" width="40" height="40" decoding="async" data-nimg="1"
-              class="size-5 md:size-8" style="color:transparent" src="/socials/x.svg"></a><a href="https://t.me/destraai_eth"
+              class="size-5 md:size-8" style="color:transparent" src="/socials/x.svg"></a><a href="https://t.me/destra_eth"
             target="_blank" rel="noopener noreferrer"><img alt="tg" loading="lazy" width="40" height="40"
               decoding="async" data-nimg="1" class="size-5 md:size-8" style="color:transparent"
               src="/socials/tg.svg"></a></div>
