--- a/tnc/index.html
+++ b/tnc/index.html
@@ -188,10 +188,10 @@
                         target="_blank" class="uppercase text-xs md:text-lg"
                         href="https://app.destraai.pro/gpu-node">gpu network</a><a target="_blank"
                         class="uppercase text-xs md:text-lg" href="https://app.destraai.pro/">deploy ai</a></div>
-                <div class="flex items-center gap-x-6"><a href="https://x.com/DestraAI_Eth" target="_blank"
+                <div class="flex items-center gap-x-6"><a href="https://x.com/Destra_Eth" target="_blank"
                         rel="noopener noreferrer"><img alt="x" loading="lazy" width="40" height="40" decoding="async"
                             data-nimg="1" class="size-5 md:size-8" style="color:transparent"
-                            src="/socials/x.svg" /></a><a href="https://t.me/destraai_eth" target="_blank"
+                            src="/socials/x.svg" /></a><a href="https://t.me/destra_eth" target="_blank"
                         rel="noopener noreferrer"><img alt="tg" loading="lazy" width="40" height="40" decoding="async"
                             data-nimg="1" class="size-5 md:size-8" style="color:transparent"
                             src="/socials/tg.svg" /></a></div>
@@ -202,7 +202,7 @@
                 <p>Destra Network @2024 all rights reserved</p>
                 <div class="relative">
                     <div class=" text-center   py-2.5 px-6 rounded-xl text-xs sm:text-sm md:text-base cursor-pointer">
-                        CA: <!-- -->0x0bfcb3bc35af28f2604f6f9580204701bb55e826</div>
+                        CA: <!-- -->0x00000000000000000000000000000000000000</div>
                 </div>
                 <div class="flex items-center gap-x-6"><a target="_blank" href="/tnc">terms &amp; conditions</a><a
                         target="_blank" href="/privacy">privacy policy</a></div>
